--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -15,7 +15,23 @@
 # is initialized.  As a result, you can not use commands which rely
 # on the UI such as :delete or :mark.
 # ===================================================================
-
+# =====[MY]==========[MY]==========[MY]==========[MY]==========[MY]==========[MY]=====
+### set preview_command bat --style=numbers --color=always --line-range=:10 --paging=never
+### 
+### map <C-f> console fzf --preview "bat --style=numbers --color=always --line-range=:10 --paging=never {}"
+### 
+### set use_exa true
+### set exa_flags --icons --group-directories-first --long --color=always
+### 
+### set show_git true
+### set git_commit_indicator true
+### set git_branch_indicator true
+### set preview_command bat --style=numbers --color=always --line-range=:10 --paging=never --git
+### 
+### set preview_command highlight --syntax=%f --style=light --noansi --line-numbers %f
+### 
+### map <C-r> shell rg --files | fzf --preview "cat {} | head -n 10" > /tmp/ranger_ripgrep_selection; mv /tmp/ranger_ripgrep_selection %s
+# =====[MY]==========[MY]==========[MY]==========[MY]==========[MY]==========[MY]=====
 # ===================================================================
 # == Options
 # ===================================================================
